<resources>
    <string name="app_name">Field in Hand</string>
    <string name="blank"></string>
    <string name="info">Written by Freddy Yu as a free tool for geologists.</string>
    <string name="welcome">Welcome to ues Field In Hand.</string>
    <string name="action_settings">Setting</string>
    <string name="watermarked">Watermarked</string>
    <string name="unwatermarked">Unwatermarked</string>
    <string name="takePhoto">Photo</string>
    <string name="save_data">Measure</string>
    <string name="clearnum">Clear</string>
    <string name="location">Turn on GPS.</string>
    <string name="direction">Hold steady.</string>
    <string name="name">Point name.</string>
    <string name="note">Type in note.</string>
    <string name="desc">CUGB logo.</string>
    <string name="notlocationed">Not,Located,yet</string>
    <string name="DataOnly">Data Only</string>
    <string name="camera_direction">camera direction</string>
    <string name="screen_direction">screen direction</string>
    <string name="pitch">y-pitch</string>
    <string name="roll">z-roll</string>
    <string name="time">date and time</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="altitude">altitude</string>
    <string name="type">type</string>
    <string name="notes">notes</string>
    <string name="locationis">Location（longitude, latitude, altitude）:</string>
    <string name="directionis">Direction is</string>
    <string name="author">Data file generated by FieldinHand,author:  Freddy@cugb.edu.cn</string>
    <string name="PhotoData">_Photo_Data</string>
    <string name="Photo">Photo</string>
    <string name="nameview">Name</string>
    <string name="timeview">Time</string>
    <string name="outputtext">&quot; \r\n&quot;name&quot;,&quot;time&quot;,&quot;longitude&quot;,&quot;latitude&quot;,&quot;atitude&quot;,&quot;compass_direction&quot;,&quot;camera_direction&quot;,&quot;screen_direction&quot;,&quot;magnetic_declination&quot;,&quot;dipangle&quot;,&quot;pitch&quot;,&quot;roll&quot;,&quot;type&quot;,&quot;notes,&quot;\r\n&quot;</string>
    <string name="detail">&quot;camera_direction&quot;+&quot;\n&quot;+camera_direction+&quot;\n screen_direction \n&quot;+screen_direction+&quot;\n pitch \n&quot;+pitch+&quot;\n roll \n&quot;+roll+&quot;\n&quot;</string>
    <string name="magnetic_declination">Magnetic Declination</string>
    <string name="inputmd">Set declination</string>
    <string name="nomd">Not set</string>
    <string name="g">Gravity</string>
    <string name="lg">Lgt</string>
    <string name="la">Lat</string>
    <string name="al">Alt</string>
    <string name="cd">Cam</string>
    <string name="sd">Dip</string>
    <string name="pt">Pitch</string>
    <string name="rl">Roll</string>
    <string name="nameis">Name is</string>
    <string name="noteis">Note is</string>
    <string name="timeis">Time is</string>
    <string name="typeis">Type is</string>
    <string name="lgis">Lgt</string>
    <string name="lais">Lat</string>
    <string name="alis">Alt</string>
    <string name="cdis">Cam</string>
    <string name="scis">Dip</string>
    <string name="mdis">MD</string>
    <string name="dais">Ang</string>
    <string name="ptis">Pitch</string>
    <string name="rlis">Roll</string>
    <string name="meter">m</string>
    <string name="compassdirection">Pointer</string>
    <string name="levelplain">Levelplain</string>
    <string name="precmp">Compass direction is</string>
    <string name="number">0</string>
    <string name="numis">No.</string>
    <string name="numcleared">Cleared</string>
    <string name="pointnumber">Point number</string>
    <string name="viewDatlocation">View</string>
    <string name="none"></string>
    <string name="viewwebsite">Web</string>
    <string name="watermarknotice">Watermark selected</string>
    <string name="unwatermarknotice">Unatermark selected</string>
    <string name="BLH">Lgt/Lat/Alt</string>
    <string name="XYZ">WGS84</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="copyleft">Build by Freddy Yu from CUGB email:Freddy@cugb.edu.cn</string>
    <string name="beginner">Move device as shown to correct electronic compass\nPlease move the device more than 2 times\nIf you find the compass not working well\nYou need to correct it like this</string>
    <string name="datafolder">Data files in SD/FieldinHand.</string>
    <string name="alert">Press Here to continue</string>
    <string name="tip">Touch compass center to Start of Freeze.</string>
    <string name="quit">Press back button again to quit</string>
    <string name="lisence">Lisence</string>
    <string name="about">About Us</string>
    <string name="introduction">Introduction</string>
    <string name="lisenceText">lisence_en.html</string>
    <string name="aboutText">aboutus_en.html</string>
    <string name="introductionText">introduction_en.html</string>
    <string name="back">Back</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="adjust">Press here to make compass calibration</string>
    <string name="soft_update_no">Already the latest</string>
    <string name="soft_update_title">Get the latest</string>
    <string name="soft_update_info">New version detected, update now</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Later</string>
    <string name="soft_updating">Updating</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="true_north">True North</string>
    <string name="mag_north">Magnetic North </string>
    <string name="datasaved">Data measured is saved!</string>
    <string name="nogravity">No gravity sensor on this device!</string>
    <string name="gravity">Gravity sensor on this device!</string>
    <string name="calibration_needed">Magnetic field interference detected,  compass calibration neede!</string>
    <string name="calibration">Auto detect Calibration</string>
    <string name="shot_cancel">Photo not taken</string>
    <string name="shot_finish">Photo taken</string>
    <string name="user">User</string>
    <string name="navi">navi</string>
    <string name="lib">lib<string></string>
    <string name="filed">filed</string>
    <string name="north">true_north</string>
    <string name="take_photo">take photo</string>
    <string name="tip1">touch to stop</string>
    <string name="tip2">touch to start</string>
    <string name="picker">picker</string>
    <string name="title_activity_show_pic_list">我的图库</string>
</resources>